Fix cart and chat overlap

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -185,9 +185,9 @@
 
   position:fixed;
 
-  right:14px;
+  right:18px;
 
-  bottom:100px;
+  bottom:150px;
 
   width:58px;
 
@@ -258,7 +258,7 @@
   position:fixed;
 
   right:16px;
-  bottom:90px;
+  bottom:20px;
 
   z-index:999999;
 
