--- a/src/app/pages/admin-products/admin-products.css
+++ b/src/app/pages/admin-products/admin-products.css
@@ -451,23 +451,23 @@
 }
 
 .search-box{
-  max-width:600px;
-  margin-bottom:20px;
+  max-width:450px;
+  margin-bottom:16px;
 }
 
 .search-box input{
 
   width:100%;
 
-  height:48px;
+  height:42px;
 
-  padding:0 20px;
+  padding:0 14px;
 
   border:1px solid #dbe3ee;
 
-  border-radius:14px;
+  border-radius:12px;
 
-  font-size:14px;
+  font-size:13px;
 
   outline:none;
 
